Fix page jump for showing scrollbar

--- a/src/styles/components/_body.scss
+++ b/src/styles/components/_body.scss
@@ -1,4 +1,5 @@
 body {
 	margin: 10px 0 0 0;
 	font-family: Helvetica Neue, Helvetica, Arial, serif;
+	overflow-y: scroll;
 }
